<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/background"
        tools:context=".QuizActivity">

    <TextView
            android:id="@+id/statement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/first_statement"
            android:textSize="20sp"
            android:textColor="@color/textColor"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

    <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

        <Button
                android:id="@+id/yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                style="?android:attr/buttonBarButtonStyle"/>
        <Button
                android:id="@+id/no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

        <ImageButton
                android:id="@+id/prev_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_left"
                android:contentDescription="@string/prev"
                style="?android:attr/buttonBarButtonStyle"/>

        <ImageButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_right"
                android:contentDescription="@string/next"
                style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>